jon gov session mobile & scroll fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,33 @@ body {
   margin: 0;
   background: black;
   overflow-x: hidden;
+  margin-left: -8px;
+}
+
+.no-scroll {
+	overflow-y: hidden;
+}
+
+.picture-container {
+	display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.pictures-inner {
+		width: 90%;
+		height: 80%;
+}
+
+.picture {
+	width:30.333%;
+	height: auto;
+	margin: 1%;
+}
+
+.scroll {
+	overflow-y: auto;
 }
 
 a {
@@ -32,6 +59,9 @@ section {
   position: relative;
   overflow: hidden;
   color: white;
+}
+section.pictures {
+	padding: 5%;
 }
 
 .down-arrow{
@@ -91,6 +121,24 @@ section {
   font-family: Avenir;
 }
 
+.vr-view-shift-up {
+	transition: top 1s;
+}
+
+.video-wrapper iframe {
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+}
+	.video-wrapper{
+		position: relative;
+	 padding-bottom: 56.25%; /* 16:9 */
+	 padding-top: 25px;
+	 height: 0; 
+	 width: 90%;
+	}
 .oculus {
   display: inline-block;
   z-index: 2;
@@ -99,4 +147,45 @@ section {
   width: 64px;
   background: url("https://static.xx.fbcdn.net/rsrc.php/v3/yA/r/OVUuqScHe6J.png") no-repeat;
   background-position: 0 -32px;
+}
+
+@media only screen and (max-width: 1200px) {
+	.text-panel {
+		width: 40%;
+		left: 55%;
+	}
+}
+
+@media only screen and (max-width: 560px) {
+	.picture {
+			width:47%;
+	}
+}
+
+@media only screen and (max-width: 420px) {
+	.vr-view {
+		  transform: scale(0.45);
+	}
+	.expand {
+	  transform: scale(1);
+	}
+}
+
+@media only screen and (max-width: 680px) {
+	.vr-view {
+		  transform: scale(0.55);
+	}
+	.expand {
+	  transform: scale(1);
+	}
+	.text-panel {
+		width: 94%;
+		left: 2%;
+		right: 2%;
+		bottom: 15%;
+
+	}
+	.vr-view-shift-up {
+		top: 0;
+	}
 }
